# FS-Image-App

./: .gitignore  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  README_ALEMBIC.md  alembic.ini  create_migration.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  app.py  middleware.py
backend/app/api/: images.py  schemas.py  votes.py
backend/app/db/: __init__.py  database.py  models.py  utils.py
backend/app/services/: image_service.py  vote_service.py
backend/tests/: conftest.py  test_api.py
backend/tests/mock/: mock_data.py
frontend/: .env.example  Dockerfile  cypress.config.mjs  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/cypress/e2e/: homepage.cy.ts
frontend/cypress/support/: commands.ts  index.d.ts
frontend/src/: main.tsx
frontend/src/components/: ExportButton.tsx
frontend/src/components/__tests__/: ImageCard.test.tsx
frontend/src/components/images/: ImageCard.tsx  ImageGrid.tsx  ImagesController.tsx  index.ts
frontend/src/constants/: api.ts
frontend/src/contexts/: SnackbarContext.tsx
frontend/src/hooks/: useExport.ts  useImageVoting.ts  useImages.ts  useSnackbar.ts
frontend/src/pages/: PhotoWall.tsx
frontend/src/services/imagesApi/: imagesApi.ts  index.ts
frontend/src/services/imagesApi/mock/: mockImagesApi.ts
frontend/src/types/: api.ts  image.ts
frontend/src/utils/: format-count.test.ts  format-count.ts
