[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "image-voting-system"
version = "0.1.0"
description = "A FastAPI-based image voting system"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "sqlalchemy",
    "uvicorn",
    "python-multipart",
]

[tool.pytest.ini_options]
pythonpath = ["."]
